--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hi! I'm Eef</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </head>
   <body>
     <section class="main-container">
@@ -12,12 +14,16 @@
         <div class="big">
           <div class="scroll">
             <div class="right-to-left">
-              <p>EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF</p>
+              <p>EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF</p>
               <p>EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF :&rpar; EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF</p>
+              <p>EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF</p>
+              <p>EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF</p>
             </div>
             <div class="left-to-right">
+              <p>HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER</p>
+              <p>HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER</p>
               <p>HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER &lt;3 HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER</p>
-              <p>HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER</p>
+              <p>HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER HALLER</p>
             </div>
           </div>
         </div>
@@ -26,10 +32,10 @@
         <section class="tile-container">
           <section class="tile">
             <img class="tile__emoji" src="assets/book.png" alt="Black and white book emoji">
-            <p class="tile__overview">Meer weten mijn educatie?</p>
+            <p class="tile__overview">Meer weten over mijn educatie?</p>
             <article class="tile__description">
-              <img src="assets/creative-coder.png">
-              <p>Tijdens mijn HAVO haalde ik mijn drogist diploma, en nu studeer ik Front-end Design & Development aan de HvA.</p>
+              <img class="tile__image" src="assets/creative-coder.png">
+              <p>In 2020 heb ik mijn HAVO diploma gehaald op het Lumion Amsterdam. Tijdens mijn laatste jaar daar heb ik ook mijn drogist diploma gehaald, dat betekent dat ik mensen mag adviseren over zelfzorg en medicijnen die daarbij horen. Nu studeer ik sinds 2020 Front-End Design & Development aan de Hogeschool van Amsterdam.</p>
             </article>
             <img class="tile__button" src="assets/emojibutton.png" alt="Finger pointing to the right">
           </section>
@@ -38,7 +44,8 @@
             <img class="tile__emoji" src="assets/codinggirlie.png" alt="Girl behind a computer">
             <p class="tile__overview">Meer weten over mijn werk?</p>
             <article class="tile__description">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis totam perferendis natus enim reprehenderit facilis quasi. Aut natus tempore quod reprehenderit? Illo quidem tempora ipsam deleniti velit, sed veniam minima?</p>
+              <img class="tile__image" src="assets/creative-coder.png">
+              <p>Mijn carriere begon bij de supermarktketen Jumbo. Lekker schoonmaken. Al snel daarna verkaste ik naar de Etos en daar heb ik drie jaar gewerkt. Ik haalde mijn drogist diploma en adviseerde klanten over medicijnen. Het werd tijd voor wat anders, dus in december 2020 ging ik bij Coolblue werken. Daar heb ik bijna drie jaar gestreden in het magazijn. Inmiddels werk ik in het Antoni van Leeuwenhoek Ziekenhuis als financieel administratief medewerkster!</p>
             </article>
             <img class="tile__button" src="assets/emojibutton.png" alt="Finger pointing to the right">
           </section>
@@ -47,7 +54,8 @@
             <img class="tile__emoji" src="assets/sparkle.png" alt="Sparkles">
             <p class="tile__overview">Meer weten over mijn gezin?</p>
             <article class="tile__description">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis totam perferendis natus enim reprehenderit facilis quasi. Aut natus tempore quod reprehenderit? Illo quidem tempora ipsam deleniti velit, sed veniam minima?</p>
+              <img class="tile__image" src="assets/creative-coder.png">
+              <p>Ik woon samen met mijn ouders in Amsterdam. Geen broertjes, geen zusjes. Lekker rustig. We gaan graag met zijn allen op vakantie naar Oostenrijk, lekker wandelen in de bergen! Mijn vader en ik hebben een gedeelde passie voor alles wat met technologie te maken heeft. Hij kijkt altijd graag mee als ik aan het werk ben aan een website, en stelt dan vragen aan mij wat alles doet, hihi! Dingen schoonmaken, netjes houden en opruimen heb ik van mijn moeder. Wij houden ervan om dingen goed te regelen en op een rijtje te hebben. Sinds 2021 ben ik samen met mijn vriend Ruben, hij studeert nu HBO ICT!</p>
             </article>
             <img class="tile__button" src="assets/emojibutton.png" alt="Finger pointing to the right">
           </section>
@@ -56,13 +64,58 @@
             <img class="tile__emoji" src="assets/nailpolish.png" alt="Nails being painted">
             <p class="tile__overview">Meer weten over mijn hobby's?</p>
             <article class="tile__description">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis totam perferendis natus enim reprehenderit facilis quasi. Aut natus tempore quod reprehenderit? Illo quidem tempora ipsam deleniti velit, sed veniam minima?</p>
+              <img class="tile__image" src="assets/creative-coder.png">
+              <p>Jaaaa, mijn hobbies! Ik vind heel veel dingen leuk, en bijna alles daarvan heeft te maken met de combinatie van technologie en creativiteit. Bijvoorbeeld fotograferen, digitaal tekenen en ontwerpen, programmeren.. Maar ook gamen vind ik helemaal leuk! Ik speel op dit moment het meest Genshin Impact, Star Rail en Overwatch 2. Maar ik vind eigenlijk alles leuk. Ook lak ik graag mijn nagels in allemaal felle kleurtjes, glitters enzo. Lekker girly.</p>
             </article>
             <img class="tile__button" src="assets/emojibutton.png" alt="Finger pointing to the right">
           </section>
         </section>
       </div>
     </section>
+    <footer class="footer">
+      <div class="footer__text">
+        <h2>Made with &lt;3</h2>
+        <h2>By Eef</h2>
+      </div>
+      <div class="footer__icons">
+        <a href="https://github.com/itsValyria">
+          <svg class="icon icon-tabler icon-tabler-brand-github" viewBox="0 0 24 24">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+          </svg>
+        </a>
+        <a href="https://instagram.com/eefhaller">
+          <svg class="icon icon-tabler icon-tabler-brand-instagram" viewBox="0 0 24 24">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <rect x="4" y="4" width="16" height="16" rx="4" />
+            <circle cx="12" cy="12" r="3" />
+            <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
+          </svg>
+        </a>
+        <a href="https://youtube.com/eeflicious">
+          <svg class="icon icon-tabler icon-tabler-brand-youtube" viewBox="0 0 24 24">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <rect x="3" y="5" width="18" height="14" rx="4" />
+            <path d="M10 9l5 3l-5 3z" />
+          </svg>
+        </a>
+        <a href="https://open.spotify.com/user/j9x9ryo1zipyebc3jnn7f1ger">
+          <svg class="icon icon-tabler icon-tabler-brand-spotify" viewBox="0 0 24 24">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <circle cx="12" cy="12" r="9" />
+            <path d="M8 11.973c2.5 -1.473 5.5 -.973 7.5 .527" />
+            <path d="M9 15c1.5 -1 4 -1 5 .5" />
+            <path d="M7 9c2 -1 6 -2 10 .5" />
+          </svg>
+        </a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+          <svg class="icon icon-tabler icon-tabler-brand-snapchat" viewBox="0 0 24 24">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M16.882 7.842a4.882 4.882 0 0 0 -9.764 0c0 4.273 -.213 6.409 -4.118 8.118c2 .882 2 .882 3 3c3 0 4 2 6 2s3 -2 6 -2c1 -2.118 1 -2.118 3 -3c-3.906 -1.709 -4.118 -3.845 -4.118 -8.118zm-13.882 8.119c4 -2.118 4 -4.118 1 -7.118m17 7.118c-4 -2.118 -4 -4.118 -1 -7.118" />
+          </svg>
+        </a>
+      </div>
+    </footer>
     <script src="scripts/script.js"></script> 
   </body>
 </html>
