almost final commit
just in case i need to revisit something

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <section class="main__container">
-      <!-- <div class="praat">
+      <div class="praat">
         <div class="big">
           <div class="scroll">
             <div class="right-to-left">
@@ -27,43 +27,54 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
       <section class="tile">
         <div class="main__left">
           <img class="main__img" src="assets/eef_dj01.jpg">
         </div>
         <div class="main__right">
           <h1 class="name">Eef Haller</h1>
-          <!-- <section class="main__abt">
-            <div>
-              <img src="assets/book.png">
-              <p>Front-End Development & Design, HvA</p>
+          <!-- <h4 class="name2">Nice to meet you!</h4> -->
+           <section>
+            <div class="main__abt">
+              <img class="abtimg" src="assets/book.png">
+              <p>Front-End Development & Design, HvA (AUAS)</p>
             </div>
-            <div>
-              <img src="assets/codinggirlie.png">
-              <p>Administratie, Antoni van Leeuwenhoek Ziekenhuis</p>
+            <div class="main__abt">
+              <img class="abtimg" src="assets/codinggirlie.png">
+              <p>Administration, The Netherlands Cancer Institute</p>
             </div>
-            <div>
-              <img src="assets/gaming.png">
-              <p>Genshin Impact, Overwatch 2</p>
+            <div class="main__abt">
+              <img class="abtimg" src="assets/gaming.png">
+              <p>Genshin Impact, Overwatch 2, Star Rail, Rainbow Six</p>
             </div>
           </section>
-          <section class="main__skills">
-            <div>
-              <p>HTML</p>
-              <p>&hearts;</p>
+          <div class="container">
+            <div class="skill-box">
+                <span class="title">HTML</span>
+                <div class="skill-bar">
+                    <span class="skill-per html">
+                        <span class="tooltip">40%</span>
+                    </span>
+                </div>
             </div>
-            <div>
-              <p>CSS</p>
-              <p>&hearts;</p>
+            <div class="skill-box">
+                <span class="title">CSS</span>
+                <div class="skill-bar">
+                    <span class="skill-per css">
+                        <span class="tooltip">30%</span>
+                    </span>
+                </div>
             </div>
-            <div>
-              <p>JS</p>
-              <p>&hearts;</p>
+            <div class="skill-box">
+                <span class="title">JavaScript</span>
+                <div class="skill-bar">
+                    <span class="skill-per javascript">
+                        <span class="tooltip">20%</span>
+                    </span>
+                </div>
             </div>
-          </section> -->
         </div>
-      </section>>
     <footer class="footer">
       <div class="footer__text">
         <h2>Made with &lt;3</h2>
