corrected diag text classes and lang

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +10,9 @@
   </head>
   <body>
     <section class="main__container">
-      <div class="praat">
-        <div class="big">
-          <div class="scroll">
+      <div class="main__scrollcontainer">
+        <div class="main__texts">
+          <div class="main__scroll">
             <div class="right-to-left">
               <p>EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF</p>
               <p>EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF :&rpar; EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF EEF</p>
