fixed github issues and added gitignore
lang, bronnen en alts.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <section class="main__container">
+      <!-- BRON: https://www.youtube.com/watch?v=WFzquzZic2o&t=25s&ab_channel=WinterwindInc. -->
       <div class="main__scrollcontainer">
         <div class="main__texts">
           <div class="main__scroll">
@@ -30,21 +31,21 @@
       </div>
       <section class="tile">
         <div class="main__left">
-          <img class="main__img" src="assets/eef_dj01.jpg">
+          <img class="main__img" src="assets/eef_dj01.jpg" alt="Picture of Eef standing behind a fake DJ table.">
         </div>
         <div class="main__right">
           <h1 class="name">Eef Haller</h1>
            <section>
             <div class="main__abt">
-              <img class="abtimg" src="assets/book.png">
+              <img class="abtimg" src="assets/book.png" alt="Black and white book emoji.">
               <p>Front-End Development & Design, HvA (AUAS)</p>
             </div>
             <div class="main__abt">
-              <img class="abtimg" src="assets/codinggirlie.png">
+              <img class="abtimg" src="assets/codinggirlie.png" alt="Girl behind computer emoji.">
               <p>Administration, The Netherlands Cancer Institute</p>
             </div>
             <div class="main__abt">
-              <img class="abtimg" src="assets/gaming.png">
+              <img class="abtimg" src="assets/gaming.png" alt="Gaming controller emoji.">
               <p>Genshin Impact, Overwatch 2, Star Rail, Rainbow Six</p>
             </div>
             <div class="container">
@@ -81,13 +82,13 @@
       </div>
       <div class="footer__icons">
         <a href="https://github.com/itsValyria">
-          <svg class="icon icon-tabler icon-tabler-brand-github" viewBox="0 0 24 24">
+          <svg class="icon icon-tabler icon-tabler-brand-github" alt="Github icon that links to Eef's github profile." viewBox="0 0 24 24">
             <path stroke="none" d="M0 0h24v24H0z" fill="none" />
             <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
           </svg>
         </a>
         <a href="https://instagram.com/eefhaller">
-          <svg class="icon icon-tabler icon-tabler-brand-instagram" viewBox="0 0 24 24">
+          <svg class="icon icon-tabler icon-tabler-brand-instagram" alt="Instagram icon that links to Eef's instagram profile." viewBox="0 0 24 24">
             <path stroke="none" d="M0 0h24v24H0z" fill="none" />
             <rect x="4" y="4" width="16" height="16" rx="4" />
             <circle cx="12" cy="12" r="3" />
@@ -95,14 +96,14 @@
           </svg>
         </a>
         <a href="https://youtube.com/eeflicious">
-          <svg class="icon icon-tabler icon-tabler-brand-youtube" viewBox="0 0 24 24">
+          <svg class="icon icon-tabler icon-tabler-brand-youtube" alt="Youtube icon that links to Eef's youtube profile." viewBox="0 0 24 24">
             <path stroke="none" d="M0 0h24v24H0z" fill="none" />
             <rect x="3" y="5" width="18" height="14" rx="4" />
             <path d="M10 9l5 3l-5 3z" />
           </svg>
         </a>
         <a href="https://open.spotify.com/user/j9x9ryo1zipyebc3jnn7f1ger">
-          <svg class="icon icon-tabler icon-tabler-brand-spotify" viewBox="0 0 24 24">
+          <svg class="icon icon-tabler icon-tabler-brand-spotify" alt="Spotify icon that links to Eef's spotify profile." viewBox="0 0 24 24">
             <path stroke="none" d="M0 0h24v24H0z" fill="none" />
             <circle cx="12" cy="12" r="9" />
             <path d="M8 11.973c2.5 -1.473 5.5 -.973 7.5 .527" />
@@ -111,7 +112,7 @@
           </svg>
         </a>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-          <svg class="icon icon-tabler icon-tabler-brand-snapchat" viewBox="0 0 24 24">
+          <svg class="icon icon-tabler icon-tabler-brand-snapchat" alt="Snapchat icon that links to Eef's snapchat.. Does it?" viewBox="0 0 24 24">
             <path stroke="none" d="M0 0h24v24H0z" fill="none" />
             <path d="M16.882 7.842a4.882 4.882 0 0 0 -9.764 0c0 4.273 -.213 6.409 -4.118 8.118c2 .882 2 .882 3 3c3 0 4 2 6 2s3 -2 6 -2c1 -2.118 1 -2.118 3 -3c-3.906 -1.709 -4.118 -3.845 -4.118 -8.118zm-13.882 8.119c4 -2.118 4 -4.118 1 -7.118m17 7.118c-4 -2.118 -4 -4.118 -1 -7.118" />
           </svg>
