--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <section class="main__container">
       <!-- BRON: https://www.youtube.com/watch?v=WFzquzZic2o&t=25s&ab_channel=WinterwindInc. -->
-      <div class="main__scrollcontainer">
+      <!-- <div class="main__scrollcontainer">
         <div class="main__texts">
           <div class="main__scroll">
             <div class="right-to-left">
@@ -28,7 +28,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <section class="tile">
         <div class="main__left">
           <img class="main__img" src="assets/eef_dj01.jpg" alt="Picture of Eef standing behind a fake DJ table.">
